# BigDataToolBox

./: .gitignore  README.md  __main__.py  main.py  prueba.py  requirements.txt  setup.cfg  setup.py
bigdatatoolbox/: .gitignore  README.md  setup.cfg  setup.py
bigdatatoolbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
bigdatatoolbox/bigdatatoolbox/: init_config.py
src/: __main__.py  config.yaml  init_config.py  run_tablon.py
src.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/bigdatatoolbox/: config.py  init_config.py  lake.py  lake_io.py
src/models/: dataframe.parquet  main_baseline_prophet_cval.py
test/: calculadora.py  test_calculadora.py
