[aliases]
test=pytest

[options]
install_requires =
    pandas>=1.3.2
    pyspark>=3.2.0
    pyarrow>=2.0.0
    gcsfs>=0.8.0
    pyodbc>=4.0.32
    google>=3.0.0
    google-api-core>=1.31.5
    google-api-python-client>=2.42.0
    google-auth>=1.35.0
    google-auth-httplib2>=0.1.0
    google-auth-oauthlib
    google-cloud-bigquery>=2.23.2
    google-cloud-bigquery-storage>=2.1.0
    google-cloud-bigtable>=1.6.1
    google-cloud-container>=2.3.1
    google-cloud-core>=1.7.2
    google-cloud-datacatalog>=3.0.0
    google-cloud-dataproc>=2.2.0
    google-cloud-datastore>=2.1.6
    google-cloud-firestore>=2.4.0
    google-cloud-language>=2.0.0
    google-cloud-logging>=2.1.1
    google-cloud-monitoring>=0.31.1
    google-cloud-pubsub>=2.2.0
    google-cloud-redis>=2.0.0
    google-cloud-spanner>=2.1.0
    google-cloud-storage>=2.1.0
    google-cloud-texttospeech>=2.2.0
    google-cloud-translate>=3.0.2
    google-cloud-vision>=2.0.0
    google-crc32c>=1.3.0
    google-resumable-media>=1.3.3
    googleapis-common-protos>=1.54.0